--- a/index.html
+++ b/index.html
@@ -234,162 +234,218 @@
 
 /* NEW MODERN RESULTS STYLES */
 .results-wrapper {
-    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    background: linear-gradient(135deg, #fff5f7 0%, #ffe8ec 50%, #ffd6dd 100%);
     padding: 40px 30px;
+    min-height: 100vh;
 }
 
 .score-header {
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-    border-radius: 20px;
-    padding: 50px 30px;
-    margin-bottom: 35px;
+    background: linear-gradient(135deg, #ff6b9d 0%, #c86dd7 100%);
+    border-radius: 24px;
+    padding: 50px 35px;
+    margin-bottom: 40px;
     color: white;
     text-align: center;
-    box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
+    box-shadow: 0 15px 40px rgba(255, 107, 157, 0.3);
+    position: relative;
+    overflow: hidden;
+}
+
+.score-header::before {
+    content: '💕';
+    position: absolute;
+    font-size: 120px;
+    opacity: 0.1;
+    top: -20px;
+    right: -20px;
 }
 
 .score-header h2 {
-    font-size: 32px;
-    margin-bottom: 35px;
+    font-size: 34px;
+    margin-bottom: 40px;
     font-weight: 700;
+    letter-spacing: -0.5px;
 }
 
 .score-display {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 25px;
-    max-width: 550px;
+    max-width: 600px;
     margin: 0 auto;
 }
 
 .score-card {
-    background: rgba(255, 255, 255, 0.25);
-    backdrop-filter: blur(10px);
-    padding: 30px 25px;
-    border-radius: 16px;
+    background: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(15px);
+    padding: 35px 25px;
+    border-radius: 20px;
     text-align: center;
-    border: 2px solid rgba(255, 255, 255, 0.3);
-    transition: transform 0.3s ease;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    transition: all 0.4s ease;
 }
 
 .score-card:hover {
-    transform: translateY(-5px);
+    transform: translateY(-8px) scale(1.02);
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.15);
 }
 
 .score-value {
-    font-size: 56px;
-    font-weight: 800;
-    margin-bottom: 10px;
-    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    font-size: 58px;
+    font-weight: 900;
+    margin-bottom: 12px;
+    text-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(135deg, #ffffff 0%, #ffe8ec 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
 }
 
 .score-label {
-    font-size: 15px;
+    font-size: 16px;
     opacity: 0.95;
-    font-weight: 500;
-    letter-spacing: 0.5px;
+    font-weight: 600;
+    letter-spacing: 0.8px;
+    text-transform: uppercase;
 }
 
 .analysis-card {
     background: white;
-    border-radius: 20px;
-    padding: 35px;
+    border-radius: 24px;
+    padding: 40px;
     margin-bottom: 30px;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
-    border: 1px solid rgba(0, 0, 0, 0.05);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 10px 30px rgba(255, 107, 157, 0.15);
+    border: 2px solid rgba(255, 182, 193, 0.3);
+    transition: all 0.4s ease;
+    position: relative;
+    overflow: hidden;
+}
+
+.analysis-card::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 5px;
+    background: linear-gradient(90deg, #ff6b9d 0%, #c86dd7 50%, #ff6b9d 100%);
+    background-size: 200% 100%;
+    animation: shimmer 3s infinite;
+}
+
+@keyframes shimmer {
+    0% { background-position: -200% 0; }
+    100% { background-position: 200% 0; }
 }
 
 .analysis-card:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.12);
+    transform: translateY(-5px);
+    box-shadow: 0 20px 50px rgba(255, 107, 157, 0.25);
+    border-color: rgba(255, 107, 157, 0.5);
 }
 
 .analysis-card-header {
     display: flex;
     align-items: center;
-    margin-bottom: 25px;
+    margin-bottom: 28px;
+    padding-bottom: 20px;
+    border-bottom: 2px solid rgba(255, 182, 193, 0.2);
 }
 
 .icon-circle {
-    width: 56px;
-    height: 56px;
+    width: 64px;
+    height: 64px;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 18px;
+    margin-right: 20px;
     flex-shrink: 0;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
+    transition: transform 0.3s ease;
+}
+
+.analysis-card:hover .icon-circle {
+    transform: rotate(5deg) scale(1.1);
 }
 
 .icon-circle svg {
-    width: 28px;
-    height: 28px;
+    width: 32px;
+    height: 32px;
 }
 
 .icon-blue {
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-    color: white;
+    background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 100%);
+    color: #c2185b;
 }
 
 .icon-green {
-    background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
-    color: white;
+    background: linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%);
+    color: #7b1fa2;
 }
 
 .icon-purple {
-    background: linear-gradient(135deg, #ee0979 0%, #ff6a00 100%);
-    color: white;
+    background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%);
+    color: #e91e63;
 }
 
 .icon-pink {
-    background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+    background: linear-gradient(135deg, #ff6b9d 0%, #c86dd7 100%);
     color: white;
 }
 
 .analysis-card h3 {
-    font-size: 24px;
-    color: #2d3748;
+    font-size: 26px;
+    color: #d81b60;
     margin: 0;
     font-weight: 700;
+    letter-spacing: -0.3px;
 }
 
 .analysis-content {
-    color: #4a5568;
-    line-height: 1.9;
-    font-size: 16px;
+    color: #555;
+    line-height: 2;
+    font-size: 17px;
+    letter-spacing: 0.2px;
 }
 
 .analysis-content p {
-    margin-bottom: 18px;
+    margin-bottom: 20px;
 }
 
 .analysis-content p:last-child {
     margin-bottom: 0;
 }
 
+.analysis-content strong {
+    color: #c2185b;
+    font-weight: 700;
+}
+
 .email-notification {
-    background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
+    background: linear-gradient(135deg, #ff6b9d 0%, #c86dd7 100%);
     color: white;
-    padding: 30px;
-    border-radius: 16px;
+    padding: 35px;
+    border-radius: 20px;
     text-align: center;
-    margin-top: 35px;
-    font-size: 18px;
-    box-shadow: 0 8px 20px rgba(17, 153, 142, 0.3);
+    margin-top: 40px;
+    font-size: 19px;
+    box-shadow: 0 15px 40px rgba(255, 107, 157, 0.35);
+    border: 2px solid rgba(255, 255, 255, 0.3);
 }
 
 .email-notification svg {
-    width: 36px;
-    height: 36px;
-    margin-bottom: 12px;
+    width: 42px;
+    height: 42px;
+    margin-bottom: 15px;
+    filter: drop-shadow(0 4px 10px rgba(0, 0, 0, 0.2));
 }
 
 .email-notification strong {
     display: block;
-    font-size: 22px;
-    margin-bottom: 8px;
+    font-size: 26px;
+    margin-bottom: 10px;
+    font-weight: 800;
 }
 
 @media (max-width: 600px) {
@@ -399,37 +455,52 @@
     
     .score-display {
         grid-template-columns: 1fr;
-        gap: 15px;
+        gap: 20px;
     }
 
     .score-header {
-        padding: 35px 20px;
+        padding: 40px 25px;
     }
 
     .score-header h2 {
-        font-size: 26px;
+        font-size: 28px;
+        margin-bottom: 30px;
     }
 
     .score-value {
-        font-size: 42px;
+        font-size: 46px;
     }
 
     .analysis-card {
-        padding: 25px 20px;
+        padding: 28px 22px;
     }
 
     .analysis-card h3 {
-        font-size: 20px;
+        font-size: 22px;
     }
 
     .icon-circle {
-        width: 48px;
-        height: 48px;
+        width: 56px;
+        height: 56px;
     }
 
     .icon-circle svg {
-        width: 24px;
-        height: 24px;
+        width: 28px;
+        height: 28px;
+    }
+
+    .analysis-content {
+        font-size: 16px;
+        line-height: 1.8;
+    }
+
+    .email-notification {
+        padding: 28px 20px;
+        font-size: 17px;
+    }
+
+    .email-notification strong {
+        font-size: 22px;
     }
 }
     </style>
@@ -967,4 +1038,5 @@
     </script>
 </body>
 </html>
+
 
