--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
                         
                         // Call serverless function
                         try {
-                            const response = await fetch('/api/analyze.js', {
+                            const response = await fetch('/api/analyze', {
                                 method: 'POST',
                                 headers: {
                                     'Content-Type': 'application/json'
@@ -1038,6 +1038,7 @@ function displayResults(analysis) {
     </script>
 </body>
 </html>
+
 
 
 
