--- a/index.html
+++ b/index.html
@@ -767,12 +767,12 @@
             <div class="analysis-preview">
                 <h3>What you'll receive:</h3>
                 <ul>
-                    <li>âœ“ Comprehensive behavioral pattern analysis</li>
-                    <li>âœ“ Context-aware assessment (not just accusations)</li>
-                    <li>âœ“ Alternative explanations for behaviors</li>
-                    <li>âœ“ Constructive communication strategies</li>
-                    <li>âœ“ Professional recommendations</li>
-                    <li>âœ“ Results sent to your email</li>
+                    <li>&#10003; Comprehensive behavioral pattern analysis</li>
+                    <li>&#10003; Context-aware assessment (not just accusations)</li>
+                    <li>&#10003; Alternative explanations for behaviors</li>
+                    <li>&#10003; Constructive communication strategies</li>
+                    <li>&#10003; Professional recommendations</li>
+                    <li>&#10003; Results sent to your email</li>
                 </ul>
             </div>
             
@@ -1038,6 +1038,7 @@ function displayResults(analysis) {
     </script>
 </body>
 </html>
+
 
 
 
