--- a/index.html
+++ b/index.html
@@ -818,11 +818,18 @@
         </div>
     </div>
 
-    <!-- Direct Answer Section (NEW) -->
-    <div class="analysis-section direct-answer-section">
+    <!-- Direct Answer Section -->
+<div class="analysis-card">
+    <div class="analysis-card-header">
+        <div class="icon-circle icon-purple">
+            <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            </svg>
+        </div>
         <h3>Direct Answer to Your Concern</h3>
-        <div id="direct-answer" class="analysis-content"></div>
     </div>
+    <div class="analysis-content" id="direct-answer"></div>
+</div>
 
             <!-- Behavioral Pattern Analysis -->
             <div class="analysis-card">
@@ -1052,6 +1059,7 @@ function displayResults(analysis) {
     </script>
 </body>
 </html>
+
 
 
 
