--- a/index.html
+++ b/index.html
@@ -503,6 +503,26 @@
         font-size: 22px;
     }
 }
+    
+    .sub-heading {
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: #2d3748;
+    margin-top: 1.5rem;
+    margin-bottom: 0.75rem;
+    padding-top: 1rem;
+    border-top: 1px solid #e2e8f0;
+}
+
+.sub-heading:first-of-type {
+    border-top: none;
+    padding-top: 0;
+}
+
+.analysis-content p {
+    margin-bottom: 1rem;
+    line-height: 1.7;
+}
     </style>
 </head>
 <body>
@@ -1066,6 +1086,7 @@ function displayResults(analysis) {
     </script>
 </body>
 </html>
+
 
 
 
